Update DSTool-Reloaded & Code Cleanup
Updated DSTool-Reloaded to 1.5.5730.24251 and removed some old code in
Diablo III & FFXIV batch files.

--- a/Win x64/Install Files/Tools/DSTool-Reloaded/ScpControl.dll.config
+++ b/Win x64/Install Files/Tools/DSTool-Reloaded/ScpControl.dll.config
@@ -23,6 +23,9 @@
       <setting name="RootHubNativeFeedPort" serializeAs="String">
         <value>26761</value>
       </setting>
+      <setting name="DumpHidReports" serializeAs="String">
+        <value>False</value>
+      </setting>
     </ScpControl.Properties.Settings>
   </applicationSettings>
   <userSettings>
