--- a/Win x64/Install Files/Tools/DSTool-Reloaded/ScpControl.ini
+++ b/Win x64/Install Files/Tools/DSTool-Reloaded/ScpControl.ini
@@ -81,10 +81,10 @@ HardwareId = USB\VID_0B05&PID_1785
 HardwareId = USB\VID_0B05&PID_1788
 HardwareId = USB\VID_0B05&PID_179C
 HardwareId = USB\VID_0B05&PID_17B5
+HardwareId = USB\VID_0B05&PID_17CB
 HardwareId = USB\VID_0B05&PID_B700
 HardwareId = USB\VID_0BDA&PID_0724
 HardwareId = USB\VID_0BDA&PID_8723
-HardwareId = USB\VID_0C10&PID_0000
 HardwareId = USB\VID_0CF3&PID_3002
 HardwareId = USB\VID_0CF3&PID_3004
 HardwareId = USB\VID_0CF3&PID_3005
@@ -101,6 +101,7 @@ HardwareId = USB\VID_413C&PID_8197
 HardwareId = USB\VID_8086&PID_0189
 HardwareId = USB\VID_8087&PID_07DA
 HardwareId = USB\VID_8087&PID_07DC
+HardwareId = USB\VID_0B05&PID_17CB
 
 [DualShock 3 Controllers]
 ; GUID to identify supported DS3 controllers
