--- a/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
+++ b/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
@@ -21,7 +21,7 @@ ScanForXInput=1
 ShowAnimations=1
 ProcessNonSelectedControllers=1
 ConnectVirtualControllerForTesting=0
-MinimizeWhenClosingMainWindow=0
+MinimizeWhenClosingMainWindow=1
 RememberWindowPositions=1
 AutoMinimizeOnOpenProfile=1
 ReturnToSet1AfterMinimizeRestore=1
@@ -47,7 +47,7 @@ TriggerSettingsWindowPosition=65535,65535
 DefaultStickDeadZone=64
 DefaultTriggerDeadZone=1
 DefaultKeyTapTime=10
-DefaultMouseSpeed=32
+DefaultMouseSpeed=50
 
 [Theme]
 Interface1=0,15,63
@@ -84,6 +84,22 @@ Controller3Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
 Controller3Recent2=Controller-Profiles\zsnes_Xbox360.xpadderprofile
 Controller3Recent3=Controller-Profiles\Project64_Xbox360.xpadderprofile
 Controller3Recent4=Controller-Profiles\pcsx2_Xbox360.xpadderprofile
+Controller4Name=Mayflash Wiimote PC Adapter
+Controller4ID=5,126,3,6
+Controller4Hidden=0
+Controller4File=Controller-Profiles\Mayflash Wiimote PC Adapter.xpaddercontroller
+Controller4Recent1=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller4Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller4Recent3=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller4Recent4=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller5Name=Controller (Xbox One For Windows)
+Controller5ID=4,94,2,255
+Controller5Hidden=0
+Controller5File=Controller-Profiles\Xbox One Controller.xpaddercontroller
+Controller5Recent1=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller5Recent2=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller5Recent3=Controller-Profiles\Nestopia_Xbox360.xpadderprofile
+Controller5Recent4=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
 
 [AutoProfiles]
 AutoProfilesActivated=0
