--- a/Win x64/Install Files/Emulators/RetroArch/configs/ppsspp_libretro.cfg
+++ b/Win x64/Install Files/Emulators/RetroArch/configs/ppsspp_libretro.cfg
@@ -1,15 +1,26 @@
-input_max_users = "2"
+input_max_users = "8"
+input_menu_toggle_gamepad_combo = "0"
 input_axis_threshold = "0.500000"
-input_remap_binds_enable = "true"
+ui_companion_start_on_boot = "true"
+video_gpu_record = "false"
+input_remap_binds_enable = "false"
+back_as_menu_toggle_enable = "true"
 netplay_client_swap_input = "true"
 input_descriptor_label_show = "true"
 autoconfig_descriptor_label_show = "true"
 input_descriptor_hide_unbound = "false"
 load_dummy_on_core_shutdown = "false"
+builtin_mediaplayer_enable = "true"
+builtin_imageviewer_enable = "true"
 fps_show = "false"
+ui_menubar_enable = "true"
 libretro_path = ":\cores\ppsspp_libretro.dll"
+suspend_screensaver_enable = "true"
 libretro_directory = ":\cores"
 libretro_info_path = ":\info"
+content_database_path = ":\database\rdb"
+cheat_database_path = ":\cheats"
+cursor_directory = ":\database\cursors"
 rewind_enable = "false"
 audio_latency = "64"
 audio_sync = "true"
@@ -17,6 +28,7 @@ audio_block_frames = "0"
 rewind_granularity = "1"
 video_shader_enable = "true"
 video_aspect_ratio = "-1.000000"
+video_aspect_ratio_auto = "true"
 video_windowed_fullscreen = "true"
 video_scale = "3.000000"
 autosave_interval = "0"
@@ -27,14 +39,26 @@ video_threaded = "false"
 video_shared_context = "false"
 video_force_srgb_disable = "false"
 video_fullscreen = "true"
+bundle_assets_extract_enable = "false"
 video_refresh_rate = "59.950001"
 video_monitor_index = "0"
 video_fullscreen_x = "0"
 video_fullscreen_y = "0"
 video_driver = "gl"
+record_driver = "ffmpeg"
+camera_driver = "null"
+location_driver = "null"
+threaded_data_runloop_enable = "true"
+dpi_override_enable = "true"
+dpi_override_value = "160"
 menu_driver = "xmb"
 menu_pause_libretro = "true"
 menu_mouse_enable = "false"
+menu_pointer_enable = "false"
+menu_timedate_enable = "true"
+menu_core_enable = "true"
+menu_dynamic_wallpaper_enable = "false"
+menu_boxart_enable = "false"
 video_vsync = "true"
 video_hard_sync = "false"
 video_hard_sync_frames = "0"
@@ -47,6 +71,9 @@ video_gpu_screenshot = "true"
 video_rotation = "0"
 screenshot_directory = ":\screenshots"
 aspect_ratio_index = "19"
+core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/win-x86_64/latest/"
+core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
+core_updater_auto_extract_archive = "true"
 camera_allow = "false"
 audio_rate_control = "true"
 audio_rate_control_delta = "0.005000"
@@ -54,39 +81,57 @@ audio_max_timing_skew = "0.050000"
 audio_volume = "0.000000"
 audio_driver = "dsound"
 audio_enable = "true"
+audio_mute_enable = "false"
 audio_out_rate = "48000"
 location_allow = "false"
 video_font_size = "32.000000"
 video_font_enable = "true"
-system_directory = ":\system"
+ups_pref = "false"
+bps_pref = "false"
+ips_pref = "false"
+system_directory = "default"
+input_remapping_directory = ":\configs\remap"
 audio_resampler = "sinc"
 savefile_directory = ":\SAVEDATA\PSP"
 savestate_directory = ":\SAVEDATA\PSP"
 video_shader_dir = ":\shaders"
 video_filter_dir = ":\filters\video"
 audio_filter_dir = ":\filters\audio"
-content_directory = ":\ROMS\PSP"
+core_assets_directory = ":\downloads"
 assets_directory = ":\assets"
+dynamic_wallpapers_directory = "default"
+boxarts_directory = "default"
 playlist_directory = ":\playlists"
-rgui_browser_directory = ":\ROMS\PSP"
+rgui_browser_directory = "default"
 rgui_config_directory = ":\configs"
 rgui_show_start_screen = "false"
 menu_navigation_wraparound_horizontal_enable = "true"
 menu_navigation_wraparound_vertical_enable = "true"
 menu_navigation_browser_filter_supported_extensions_enable = "true"
-game_history_path = ":\configs\retroarch-content-history.txt"
-game_history_size = "100"
+menu_collapse_subgroups_enable = "true"
+menu_show_advanced_settings = "true"
+menu_entry_normal_color = "ffffffff"
+menu_entry_hover_color = "ff64ff64"
+menu_title_color = "ff64ff64"
+content_history_path = ":\content_history.lpl"
+content_history_size = "100"
 joypad_autoconfig_dir = ":\autoconfig"
-input_autodetect_enable = "true"
+input_autodetect_enable = "false"
 overlay_directory = ":\overlays"
 input_overlay_enable = "true"
+input_overlay_enable_autopreferred = "true"
+input_overlay_hide_in_menu = "true"
 input_overlay_opacity = "0.700000"
 input_overlay_scale = "1.000000"
+osk_overlay_directory = ":\overlays"
+input_osk_overlay_enable = "false"
 video_message_pos_x = "0.050000"
 video_message_pos_y = "0.050000"
 gamma_correction = "false"
 soft_filter_enable = "false"
 flicker_filter_enable = "false"
+console_resolution_width = "0"
+console_resolution_height = "0"
 flicker_filter_index = "0"
 soft_filter_index = "0"
 current_resolution_id = "0"
@@ -94,6 +139,7 @@ custom_viewport_width = "960"
 custom_viewport_height = "720"
 custom_viewport_x = "0"
 custom_viewport_y = "0"
+video_font_size = "32.000000"
 block_sram_overwrite = "false"
 savestate_auto_index = "false"
 savestate_auto_save = "false"
@@ -104,7 +150,7 @@ fastforward_ratio_throttle_enable = "false"
 slowmotion_ratio = "3.000000"
 config_save_on_exit = "true"
 sound_mode = "0"
-state_slot = "0"
+state_slot = "2"
 netplay_spectator_mode_enable = "false"
 netplay_mode = "false"
 netplay_ip_port = "0"
@@ -116,7 +162,7 @@ input_joypad_driver = "winxinput"
 input_device_p1 = "0"
 input_player1_joypad_index = "0"
 input_libretro_device_p1 = "5"
-input_player1_analog_dpad_mode = "0"
+input_player1_analog_dpad_mode = "1"
 input_device_p2 = "0"
 input_player2_joypad_index = "1"
 input_libretro_device_p2 = "1"
@@ -312,6 +358,9 @@ input_screenshot_axis = "nul"
 input_audio_mute = "f9"
 input_audio_mute_btn = "nul"
 input_audio_mute_axis = "nul"
+input_osk_toggle = "f12"
+input_osk_toggle_btn = "nul"
+input_osk_toggle_axis = "nul"
 input_netplay_flip_players = "i"
 input_netplay_flip_players_btn = "nul"
 input_netplay_flip_players_axis = "nul"
@@ -343,7 +392,7 @@ input_grab_mouse_toggle = "f11"
 input_grab_mouse_toggle_btn = "nul"
 input_grab_mouse_toggle_axis = "nul"
 input_menu_toggle = "f1"
-input_menu_toggle_btn = "10"
+input_menu_toggle_btn = "nul"
 input_menu_toggle_axis = "nul"
 input_player2_b = "nul"
 input_player2_b_btn = "nul"
@@ -1471,61 +1520,13 @@ input_player16_turbo = "nul"
 input_player16_turbo_btn = "nul"
 input_player16_turbo_axis = "nul"
 core_specific_config = "false"
-libretro_log_level = "0"
-log_verbosity = "false"
-perfcnt_enable = "false"
-archive_mode = "0"
-video_gpu_record = "false"
-ui_menubar_enable = "true"
-suspend_screensaver_enable = "true"
-video_aspect_ratio_auto = "false"
-threaded_data_runloop_enable = "true"
-menu_timedate_enable = "true"
-menu_core_enable = "true"
-core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/win-x86_64/latest/"
-core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
-core_updater_auto_extract_archive = "true"
-audio_mute_enable = "false"
-ups_pref = "false"
-bps_pref = "false"
-ips_pref = "false"
-core_assets_directory = ":\downloads"
-menu_collapse_subgroups_enable = "true"
-menu_show_advanced_settings = "false"
-menu_entry_normal_color = "ffffffff"
-menu_entry_hover_color = "ff64ff64"
-menu_title_color = "ff64ff64"
-osk_overlay_directory = ":\overlays"
-input_osk_overlay_enable = "false"
-input_menu_toggle_gamepad_combo = "0"
-ui_companion_start_on_boot = "true"
-back_as_menu_toggle_enable = "true"
-builtin_mediaplayer_enable = "true"
-builtin_imageviewer_enable = "true"
-bundle_assets_extract_enable = "false"
-record_driver = "ffmpeg"
-camera_driver = "null"
-location_driver = "null"
-dpi_override_enable = "true"
-dpi_override_value = "200"
-menu_pointer_enable = "false"
-menu_dynamic_wallpaper_enable = "false"
-menu_boxart_enable = "false"
-dynamic_wallpapers_directory = "default"
-boxarts_directory = "default"
-content_history_path = ":\configs\content_history.lpl"
-content_history_size = "100"
-input_overlay_enable_autopreferred = "true"
-input_overlay_hide_in_menu = "true"
-console_resolution_width = "0"
-console_resolution_height = "0"
-input_osk_toggle = "f12"
-input_osk_toggle_btn = "nul"
-input_osk_toggle_axis = "nul"
 auto_overrides_enable = "false"
 auto_remaps_enable = "false"
 sort_savefiles_enable = "false"
 sort_savestates_enable = "false"
+libretro_log_level = "0"
+log_verbosity = "false"
+perfcnt_enable = "false"
 core_set_supports_no_game_enable = "true"
 menu_ok_btn = "8"
 menu_cancel_btn = "0"
@@ -1534,14 +1535,11 @@ menu_info_btn = "2"
 menu_default_btn = "3"
 menu_scroll_down_btn = "11"
 menu_scroll_up_btn = "10"
-core_options_path = ":\configs"
-content_database_path = ":\database\rdb"
-cheat_database_path = ":\cheats"
-cursor_directory = ":\database\cursors"
-content_history_dir = ":\configs"
 menu_wallpaper = ":\assets\wallpapers\posterized consoles\1440x900\Sony - PlayStation Portable.png"
+core_options_path = ""
 recording_output_directory = ""
 recording_config_directory = ""
+content_history_dir = ""
 video_shader = ""
 bundle_assets_last_extracted_version = ""
 audio_device = ""
@@ -1550,7 +1548,6 @@ audio_dsp_plugin = ""
 camera_device = ""
 video_context_driver = ""
 extraction_directory = ""
-input_remapping_directory = ""
 input_remapping_path = ""
 resampler_directory = ""
 input_overlay = ""
