Update PCSX2 Emulator
Upgraded to latest version of PCSX2 (1.5.0_127).

--- a/Win x64/Install Files/Emulators/PS2/pcsx2/inis/PCSX2_vm.ini
+++ b/Win x64/Install Files/Emulators/PS2/pcsx2/inis/PCSX2_vm.ini
@@ -3,21 +3,22 @@ CdvdVerboseReads=disabled
 CdvdDumpBlocks=disabled
 CdvdShareWrite=disabled
 EnablePatches=enabled
-EnableCheats=enabled
-EnableWideScreenPatches=enabled
+EnableCheats=disabled
+EnableWideScreenPatches=disabled
 ConsoleToStdio=disabled
 HostFs=disabled
 BackupSavestate=enabled
 McdEnableEjection=enabled
+McdFolderAutoManage=enabled
 MultitapPort0_Enabled=disabled
 MultitapPort1_Enabled=disabled
 [EmuCore/Speedhacks]
 EECycleRate=0
 VUCycleSteal=0
 fastCDVD=disabled
-IntcStat=disabled
-WaitLoop=disabled
-vuFlagHack=disabled
+IntcStat=enabled
+WaitLoop=enabled
+vuFlagHack=enabled
 vuThread=disabled
 [EmuCore/CPU]
 FPU.DenormalsAreZero=enabled
@@ -74,6 +75,7 @@ VIF1StallHack=disabled
 GIFReverseHack=disabled
 FMVinSoftwareHack=disabled
 GoemonTlbHack=disabled
+ScarfaceIbit=disabled
 [EmuCore/Profiler]
 Enabled=disabled
 RecBlocks_EE=enabled
@@ -84,6 +86,8 @@ RecBlocks_VU1=enabled
 ShowDebuggerOnStart=disabled
 FontWidth=8
 FontHeight=12
+WindowWidth=0
+WindowHeight=0
 [EmuCore/TraceLog]
 Enabled=disabled
 EE.bitset=0
