Updated PCSX2 Emulator
Updated PCSX2 Emulator to 1.5.0-dev-546-gb8a023d

--- a/Win x64/Install Files/Emulators/PS2/pcsx2/inis/PCSX2_ui.ini
+++ b/Win x64/Install Files/Emulators/PS2/pcsx2/inis/PCSX2_ui.ini
@@ -12,7 +12,7 @@ DeskTheme=default
 Listbook_ImageSize=32
 Toolbar_ImageSize=24
 Toolbar_ShowLabels=enabled
-CurrentIso=\\SteamConsole\\Emulators\\ROMS\\PS2\\Final Fantasy X.iso
+CurrentIso=
 CurrentELF=
 EnableSpeedHacks=enabled
 EnableGameFixes=disabled
@@ -20,6 +20,7 @@ EnablePresets=enabled
 PresetIndex=0
 McdCompressNTFS=enabled
 CdvdSource=Iso
+CurrentIRX=
 [MemoryCards]
 Slot1_Enable=enabled
 Slot1_Filename=Mcd001.ps2
@@ -40,7 +41,7 @@ Multitap2_Slot4_Filename=Mcd-Multitap2-Slot04.ps2
 [ProgramLog]
 Visible=enabled
 AutoDock=enabled
-DisplayPosition=515,130
+DisplayPosition=525,130
 DisplaySize=680,560
 FontSize=8
 Theme=Default
@@ -80,7 +81,7 @@ DefaultToFullscreen=enabled
 AlwaysHideMouse=enabled
 DisableResizeBorders=disabled
 DisableScreenSaver=enabled
-WindowSize=1904,1032
+WindowSize=1424,852
 WindowPos=78,78
 IsMaximized=disabled
 IsFullscreen=disabled
@@ -135,6 +136,17 @@ IOP.Events.Counters=disabled
 IOP.Events.CDVD=disabled
 [TraceLogSources/IOP.Disasm.COP2]
 GPU=disabled
+[UiTemplates]
+LimiterUnlimited=Max
+LimiterTurbo=Turbo
+LimiterSlowmo=Slowmo
+LimiterNormal=Normal
+OutputFrame=Frame
+OutputField=Field
+OutputProgressive=Progressive
+OutputInterlaced=Interlaced
+Paused=<PAUSED> 
+TitleTemplate=Slot: ${slot} | Speed: ${speed} (${vfps}) | Limiter: ${limiter} | ${gsdx} | ${omodei} | ${cpuusage}
 [RecentIso]
 Filename00=\\SteamConsole\\Emulators\\ROMS\\PS2\\Final Fantasy XII.iso
 Filename01=\\SteamConsole\\Emulators\\ROMS\\PS2\\Rogue Galaxy.iso
