--- a/Win x64/Install Files/Emulators/PS2/pcsx2/inis/PCSX2_vm.ini
+++ b/Win x64/Install Files/Emulators/PS2/pcsx2/inis/PCSX2_vm.ini
@@ -16,9 +16,9 @@ MultitapPort1_Enabled=disabled
 EECycleRate=0
 VUCycleSteal=0
 fastCDVD=disabled
-IntcStat=enabled
-WaitLoop=enabled
-vuFlagHack=enabled
+IntcStat=disabled
+WaitLoop=disabled
+vuFlagHack=disabled
 vuThread=disabled
 [EmuCore/CPU]
 FPU.DenormalsAreZero=enabled
@@ -86,8 +86,8 @@ RecBlocks_VU1=enabled
 ShowDebuggerOnStart=disabled
 FontWidth=8
 FontHeight=12
-WindowWidth=0
-WindowHeight=0
+WindowWidth=1000
+WindowHeight=836
 [EmuCore/TraceLog]
 Enabled=disabled
 EE.bitset=0
