--- a/Win x64/Install Files/Emulators/PS2/pcsx2/inis/SPU2-X.ini
+++ b/Win x64/Install Files/Emulators/PS2/pcsx2/inis/SPU2-X.ini
@@ -64,3 +64,4 @@ DMA7Log_Filename=SPU2dma7.dat
 Info_Dump_Filename=SPU2Cores.txt
 Mem_Dump_Filename=SPU2mem.dat
 Reg_Dump_Filename=SPU2regs.dat
+DelayCycles=4
