--- a/Win x64/Install Files/Emulators/PS2/pcsx2/inis/LilyPad.ini
+++ b/Win x64/Install Files/Emulators/PS2/pcsx2/inis/LilyPad.ini
@@ -1,5 +1,5 @@
 [General Settings]
-Last Config Path=C:\SteamConsole\Emulators\PS2\pcsx2
+Last Config Path=C:\Users\Dan-H\Documents\GitHub\SteamConsole\Win x64\Install Files\Emulators\PS2\pcsx2
 Last Config Name=Xbox360.lily
 Force Cursor Hide=0
 Mouse Unfocus=1
@@ -10,8 +10,8 @@ XInput=1
 DualShock 3=0
 Multitap 1=0
 Multitap 2=0
-Escape Fullscreen Hack=1
-Disable Screen Saver=1
+Escape Fullscreen Hack=0
+Disable Screen Saver=0
 Logging=0
 Save State in Title=0
 GH2=0
@@ -61,16 +61,16 @@ Instance ID=WM Mouse
 API=2
 Type=2
 [Device 3]
-Display Name=Raw MS: HID-compliant mouse
-Instance ID=\\?\HID#VID_046D&PID_C517&MI_01&Col01#8&38e3ef34&0&0000#{378de44c-56ef-11d1-bc8c-00a0c91405dd}
-Product ID=\\?\HID\VID_046D&PID_C517&MI_01&Col01
-API=3
-Type=2
-[Device 4]
 Display Name=Raw KB: HID Keyboard Device
-Instance ID=\\?\HID#VID_046D&PID_C517&MI_00#8&150cb172&0&0000#{884b96c3-56ef-11d1-bc8c-00a0c91405dd}
+Instance ID=\\?\HID#VID_046D&PID_C315#7&30e65b7b&0&0000#{884b96c3-56ef-11d1-bc8c-00a0c91405dd}
 API=3
 Type=1
+[Device 4]
+Display Name=Raw MS: HID-compliant mouse
+Instance ID=\\?\HID#VID_0461&PID_4D81#7&33015430&0&0000#{378de44c-56ef-11d1-bc8c-00a0c91405dd}
+Product ID=\\?\HID\VID_0461&PID_4D81
+API=3
+Type=2
 [Device 5]
 Display Name=Simulated Keyboard
 Instance ID=Simulated Keyboard
@@ -86,59 +86,59 @@ Display Name=XInput Pad 0
 Instance ID=XInput Pad 0
 API=4
 Type=3
-Binding 0=0x00040000, 0, 20, 65536, 0, 0, 0
-Binding 1=0x00040001, 0, 22, 65536, 0, 0, 0
-Binding 2=0x00040002, 0, 23, 65536, 0, 0, 0
-Binding 3=0x00040003, 0, 21, 65536, 0, 0, 0
-Binding 4=0x00040004, 0, 19, 65536, 0, 0, 0
-Binding 5=0x00040005, 0, 16, 65536, 0, 0, 0
-Binding 6=0x00040006, 0, 17, 65536, 0, 0, 0
-Binding 7=0x00040007, 0, 18, 65536, 0, 0, 0
-Binding 8=0x00040008, 0, 26, 65536, 0, 0, 0
-Binding 9=0x00040009, 0, 27, 65536, 0, 0, 0
-Binding 10=0x0004000C, 0, 30, 65536, 0, 0, 0
-Binding 11=0x0004000D, 0, 29, 65536, 0, 0, 0
-Binding 12=0x0004000E, 0, 31, 65536, 0, 0, 0
-Binding 13=0x0004000F, 0, 28, 65536, 0, 0, 0
+Binding 0=0x00200000, 0, 20, 65536, 0, 0, 1
+Binding 1=0x00200001, 0, 22, 65536, 0, 0, 1
+Binding 2=0x00200002, 0, 23, 65536, 0, 0, 1
+Binding 3=0x00200003, 0, 21, 65536, 0, 0, 1
+Binding 4=0x00200004, 0, 19, 65536, 0, 0, 1
+Binding 5=0x00200005, 0, 16, 65536, 0, 0, 1
+Binding 6=0x00200006, 0, 17, 65536, 0, 0, 1
+Binding 7=0x00200007, 0, 18, 65536, 0, 0, 1
+Binding 8=0x00200008, 0, 26, 65536, 0, 0, 1
+Binding 9=0x00200009, 0, 27, 65536, 0, 0, 1
+Binding 10=0x0020000C, 0, 30, 65536, 0, 0, 1
+Binding 11=0x0020000D, 0, 29, 65536, 0, 0, 1
+Binding 12=0x0020000E, 0, 31, 65536, 0, 0, 1
+Binding 13=0x0020000F, 0, 28, 65536, 0, 0, 1
 Binding 14=0x00200010, 0, 24, 65536, 0, 0, 1
 Binding 15=0x00200011, 0, 25, 65536, 0, 0, 1
-Binding 16=0x01020012, 0, 33, 65536, 0, 0, 13172
-Binding 17=0x02020012, 0, 35, 65536, 0, 0, 13172
-Binding 18=0x01020013, 0, 32, 65536, 0, 0, 13172
-Binding 19=0x02020013, 0, 34, 65536, 0, 0, 13172
-Binding 20=0x01020014, 0, 37, 65536, 0, 0, 13172
-Binding 21=0x02020014, 0, 39, 65536, 0, 0, 13172
-Binding 22=0x01020015, 0, 36, 65536, 0, 0, 13172
-Binding 23=0x02020015, 0, 38, 65536, 0, 0, 13172
+Binding 16=0x01020013, 0, 33, 65536, 0, 0, 13172
+Binding 17=0x02020013, 0, 35, 65536, 0, 0, 13172
+Binding 18=0x01020014, 0, 32, 65536, 0, 0, 13172
+Binding 19=0x02020014, 0, 34, 65536, 0, 0, 13172
+Binding 20=0x01020015, 0, 37, 65536, 0, 0, 13172
+Binding 21=0x02020015, 0, 39, 65536, 0, 0, 13172
+Binding 22=0x01020016, 0, 36, 65536, 0, 0, 13172
+Binding 23=0x02020016, 0, 38, 65536, 0, 0, 13172
 [Device 8]
 Display Name=XInput Pad 1
 Instance ID=XInput Pad 1
 API=4
 Type=3
-Binding 0=0x00040000, 1, 20, 65536, 0, 0, 0
-Binding 1=0x00040001, 1, 22, 65536, 0, 0, 0
-Binding 2=0x00040002, 1, 23, 65536, 0, 0, 0
-Binding 3=0x00040003, 1, 21, 65536, 0, 0, 0
-Binding 4=0x00040004, 1, 19, 65536, 0, 0, 0
-Binding 5=0x00040005, 1, 16, 65536, 0, 0, 0
-Binding 6=0x00040006, 1, 17, 65536, 0, 0, 0
-Binding 7=0x00040007, 1, 18, 65536, 0, 0, 0
-Binding 8=0x00040008, 1, 26, 65536, 0, 0, 0
-Binding 9=0x00040009, 1, 27, 65536, 0, 0, 0
-Binding 10=0x0004000C, 1, 30, 65536, 0, 0, 0
-Binding 11=0x0004000D, 1, 29, 65536, 0, 0, 0
-Binding 12=0x0004000E, 1, 31, 65536, 0, 0, 0
-Binding 13=0x0004000F, 1, 28, 65536, 0, 0, 0
+Binding 0=0x00200000, 1, 20, 65536, 0, 0, 1
+Binding 1=0x00200001, 1, 22, 65536, 0, 0, 1
+Binding 2=0x00200002, 1, 23, 65536, 0, 0, 1
+Binding 3=0x00200003, 1, 21, 65536, 0, 0, 1
+Binding 4=0x00200004, 1, 19, 65536, 0, 0, 1
+Binding 5=0x00200005, 1, 16, 65536, 0, 0, 1
+Binding 6=0x00200006, 1, 17, 65536, 0, 0, 1
+Binding 7=0x00200007, 1, 18, 65536, 0, 0, 1
+Binding 8=0x00200008, 1, 26, 65536, 0, 0, 1
+Binding 9=0x00200009, 1, 27, 65536, 0, 0, 1
+Binding 10=0x0020000C, 1, 30, 65536, 0, 0, 1
+Binding 11=0x0020000D, 1, 29, 65536, 0, 0, 1
+Binding 12=0x0020000E, 1, 31, 65536, 0, 0, 1
+Binding 13=0x0020000F, 1, 28, 65536, 0, 0, 1
 Binding 14=0x00200010, 1, 24, 65536, 0, 0, 1
 Binding 15=0x00200011, 1, 25, 65536, 0, 0, 1
-Binding 16=0x01020012, 1, 33, 65536, 0, 0, 13172
-Binding 17=0x02020012, 1, 35, 65536, 0, 0, 13172
-Binding 18=0x01020013, 1, 32, 65536, 0, 0, 13172
-Binding 19=0x02020013, 1, 34, 65536, 0, 0, 13172
-Binding 20=0x01020014, 1, 37, 65536, 0, 0, 13172
-Binding 21=0x02020014, 1, 39, 65536, 0, 0, 13172
-Binding 22=0x01020015, 1, 36, 65536, 0, 0, 13172
-Binding 23=0x02020015, 1, 38, 65536, 0, 0, 13172
+Binding 16=0x01020013, 1, 33, 65536, 0, 0, 13172
+Binding 17=0x02020013, 1, 35, 65536, 0, 0, 13172
+Binding 18=0x01020014, 1, 32, 65536, 0, 0, 13172
+Binding 19=0x02020014, 1, 34, 65536, 0, 0, 13172
+Binding 20=0x01020015, 1, 37, 65536, 0, 0, 13172
+Binding 21=0x02020015, 1, 39, 65536, 0, 0, 13172
+Binding 22=0x01020016, 1, 36, 65536, 0, 0, 13172
+Binding 23=0x02020016, 1, 38, 65536, 0, 0, 13172
 [Device 9]
 Display Name=XInput Pad 2
 Instance ID=XInput Pad 2
@@ -163,26 +163,8 @@ API=1
 Type=1
 [Device 13]
 Display Name=DX Controller (Xbox 360 Wireless Receiver for Windows)
-Instance ID=F2679070-B78E-11E4-8005-444553540000
+Instance ID=955690C0-FAAE-11E5-8001-444553540000
 Product ID=02A1045E-0000-0000-0000-504944564944
 API=1
 Type=3
 Binding 0=0x01020001, 0, 34, 65536, 0, 0, 13172
-[Device 14]
-Display Name=DX USB Receiver
-Instance ID=F2547DA0-B78E-11E4-8001-444553540000
-Product ID=C517046D-0000-0000-0000-504944564944
-API=1
-Type=3
-[Device 15]
-Display Name=DX USB Receiver
-Instance ID=F2654680-B78E-11E4-8002-444553540000
-Product ID=C517046D-0000-0000-0000-504944564944
-API=1
-Type=3
-[Device 16]
-Display Name=DX Controller (Xbox 360 Wireless Receiver for Windows)
-Instance ID=420BD9D0-B92C-11E4-8001-444553540000
-Product ID=02A1045E-0000-0000-0000-504944564944
-API=1
-Type=3
