Updated Xpadder Profiles
Updated config and controller profiles for Xpadder. Added fixes for xbox
one wired/wireless controller and real wii-motes.

--- a/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
+++ b/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
@@ -4,7 +4,7 @@
 
 [Core Settings]
 LastVersion=5.7
-LastHost=EB488BDE
+LastHost=29D035DF
 Language=English
 
 [Default Locations]
@@ -29,25 +29,25 @@ ShowTaskbarButtonWhenMinimized=0
 ShowIconInNotificationArea=1
 
 [Window Positions]
-AssignmentSettingsWindowPosition=489,92
-AssignmentAdvancedSettingsWindowPosition=458,267
+AssignmentSettingsWindowPosition=588,389
+AssignmentAdvancedSettingsWindowPosition=660,341
 ControllerPropertiesWindowPosition=674,341
 ControllerSettingsWindowPosition=693,298
 DPadSettingsWindowPosition=65535,65535
-HelpWindowPosition=65535,65535
-MainWindowPosition=1296,1040
+HelpWindowPosition=728,361
+MainWindowPosition=1936,1096
 MouseSettingsWindowPosition=701,353
-ProfileSettingsWindowPosition=787,435
-SettingsWindowPosition=690,341
-Stick1SettingsWindowPosition=351,325
+ProfileSettingsWindowPosition=65535,65535
+SettingsWindowPosition=370,313
+Stick1SettingsWindowPosition=667,347
 Stick2SettingsWindowPosition=667,347
-TriggerSettingsWindowPosition=65535,65535
+TriggerSettingsWindowPosition=664,419
 
 [Defaults]
 DefaultStickDeadZone=64
 DefaultTriggerDeadZone=1
 DefaultKeyTapTime=10
-DefaultMouseSpeed=50
+DefaultMouseSpeed=32
 
 [Theme]
 Interface1=0,15,63
@@ -60,48 +60,67 @@ ThemeImage=
 ThemeButtons=Vista
 
 [Controllers]
-Controller1Name=Controller (Xbox 360 Wireless Receiver for Windows)
-Controller1ID=4,94,2,161
+Controller1Name=Controller (XBOX 360 For Windows)
+Controller1ID=4,94,2,142
 Controller1Hidden=0
 Controller1File=Controller-Profiles\My Controller (Xbox 360 Wireless Receiver for Windows).xpaddercontroller
 Controller1Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
-Controller1Recent2=Controller-Profiles\Project64_Xbox360.xpadderprofile
-Controller1Recent3=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller1Recent4=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
+Controller1Recent2=Controller-Profiles\fusion_Xbox360.xpadderprofile
+Controller1Recent3=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
+Controller1Recent4=
 Controller2Name=Wireless Controller
 Controller2ID=5,76,5,196
 Controller2Hidden=0
-Controller2File=Controller-Profiles\My Controller (Xbox 360 Wireless Receiver for Windows).xpaddercontroller
-Controller2Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
-Controller2Recent2=Controller-Profiles\fusion_Xbox360.xpadderprofile
-Controller2Recent3=Controller-Profiles\Nestopia_Xbox360.xpadderprofile
-Controller2Recent4=Controller-Profiles\pcsx2_Xbox360.xpadderprofile
-Controller3Name=Controller (XBOX 360 For Windows)
-Controller3ID=4,94,2,142
+Controller2File=
+Controller2Recent1=
+Controller2Recent2=
+Controller2Recent3=
+Controller2Recent4=
+Controller3Name=Controller (Xbox 360 Wireless Receiver for Windows)
+Controller3ID=4,94,2,161
 Controller3Hidden=0
 Controller3File=Controller-Profiles\My Controller (Xbox 360 Wireless Receiver for Windows).xpaddercontroller
 Controller3Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
-Controller3Recent2=Controller-Profiles\zsnes_Xbox360.xpadderprofile
-Controller3Recent3=Controller-Profiles\Project64_Xbox360.xpadderprofile
-Controller3Recent4=Controller-Profiles\pcsx2_Xbox360.xpadderprofile
+Controller3Recent2=
+Controller3Recent3=
+Controller3Recent4=
 Controller4Name=Mayflash Wiimote PC Adapter
 Controller4ID=5,126,3,6
 Controller4Hidden=0
 Controller4File=Controller-Profiles\Mayflash Wiimote PC Adapter.xpaddercontroller
-Controller4Recent1=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller4Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller4Recent3=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller4Recent4=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller4Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller4Recent2=
+Controller4Recent3=
+Controller4Recent4=
 Controller5Name=Controller (Xbox One For Windows)
 Controller5ID=4,94,2,255
 Controller5Hidden=0
 Controller5File=Controller-Profiles\Xbox One Controller.xpaddercontroller
-Controller5Recent1=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller5Recent2=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller5Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller5Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
 Controller5Recent3=Controller-Profiles\Nestopia_Xbox360.xpadderprofile
 Controller5Recent4=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
+Controller6Name=Controller (XBOX One For Windows)
+Controller6ID=4,94,2,221
+Controller6Hidden=0
+Controller6File=Controller-Profiles\Xbox One Controller Wired.xpaddercontroller
+Controller6Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller6Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller6Recent3=
+Controller6Recent4=
+Controller7Name=Controller (Xbox One For Windows)
+Controller7ID=4,94,2,209
+Controller7Hidden=0
+Controller7File=Controller-Profiles\Xbox One Controller.xpaddercontroller
+Controller7Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller7Recent2=
+Controller7Recent3=
+Controller7Recent4=
 
 [AutoProfiles]
 AutoProfilesActivated=0
 AutoProfile1Activated=0
 AutoProfile1Profile=
+AutoProfile2Activated=1
+AutoProfile2Profile=
+AutoProfile2Watch=Xpadder.exe
