Updated Dolphin, PCSX2 & RetroArch To Latest Version

--- a/Win x64/Install Files/Emulators/RetroArch/configs/nestopia_libretro.cfg
+++ b/Win x64/Install Files/Emulators/RetroArch/configs/nestopia_libretro.cfg
@@ -1538,26 +1538,78 @@ input_overlay_enable_autopreferred = "true"
 input_overlay_hide_in_menu = "true"
 console_resolution_width = "0"
 console_resolution_height = "0"
-core_options_path = ""
+input_turbo_period = "6"
+input_duty_cycle = "3"
+ui_companion_enable = "false"
 recording_output_directory = ""
 recording_config_directory = ""
-content_database_path = ""
-cheat_database_path = ""
-cursor_directory = ""
-content_history_dir = ""
+core_options_path = ""
 video_shader = ""
-bundle_assets_last_extracted_version = ""
-audio_device = ""
+bundle_assets_src_path = ""
+bundle_assets_dst_path = ""
+bundle_assets_dst_path_subdir = ""
+content_database_path = ":\database\rdb"
+cheat_database_path = ":\cheats"
 audio_dsp_plugin = ""
-camera_device = ""
-video_context_driver = ""
-extraction_directory = ""
-input_remapping_directory = ""
-input_remapping_path = ""
-resampler_directory = ""
 input_overlay = ""
 input_osk_overlay = ""
 video_font_path = ""
+cursor_directory = ":\database\cursors"
+content_history_dir = ""
+bundle_assets_extract_version_current = "0"
+bundle_assets_extract_last_version = "0"
+playlist_names = ""
+playlist_cores = ""
+menu_throttle_framerate = "true"
+menu_linear_filter = "true"
+menu_thumbnails = "0"
+auto_screenshot_filename = "true"
+audio_device = ""
+camera_device = ""
+cheevos_enable = "false"
+cheevos_test_unofficial = "false"
+cheevos_hardcore_mode_enable = "false"
+cheevos_username = ""
+cheevos_password = ""
+video_context_driver = ""
+video_message_color = "ffff00"
+cache_directory = ""
+input_remapping_directory = ":\config\remap"
+resampler_directory = ""
+thumbnails_directory = ":\thumbnails"
+xmb_scale_factor = "100"
+xmb_alpha_factor = "75"
+xmb_theme = "0"
+xmb_gradient = "0"
+xmb_shadows_enable = "false"
+xmb_ribbon_enable = "0"
+xmb_font = ""
+menu_navigation_wraparound_enable = "true"
+network_cmd_enable = "false"
+stdin_cmd_enable = "false"
+network_cmd_port = "55355"
 netplay_ip_address = ""
 netplay_nickname = ""
 input_keyboard_layout = ""
+network_remote_enable_user_p1 = "false"
+network_remote_enable_user_p2 = "false"
+network_remote_enable_user_p3 = "false"
+network_remote_enable_user_p4 = "false"
+network_remote_enable_user_p5 = "false"
+network_remote_enable_user_p6 = "false"
+network_remote_enable_user_p7 = "false"
+network_remote_enable_user_p8 = "false"
+network_remote_enable_user_p9 = "false"
+network_remote_enable_user_p10 = "false"
+network_remote_enable_user_p11 = "false"
+network_remote_enable_user_p12 = "false"
+network_remote_enable_user_p13 = "false"
+network_remote_enable_user_p14 = "false"
+network_remote_enable_user_p15 = "false"
+network_remote_enable_user_p16 = "false"
+network_remote_enable = "false"
+network_remote_base_port = "55400"
+game_specific_options = "false"
+keyboard_gamepad_enable = "true"
+keyboard_gamepad_mapping_type = "1"
+input_poll_type_behavior = "2"
