--- a/Win x64/Install Files/Emulators/RetroArch/configs/retroarch-core-options.cfg
+++ b/Win x64/Install Files/Emulators/RetroArch/configs/retroarch-core-options.cfg
@@ -111,3 +111,5 @@ desmume_spu_sync_method = "Z"
 desmume_spu_interpolation = "Linear"
 mupen64-boot-device = "Default"
 mupen64-64dd-hardware = "disabled"
+nestopia_genie_distortion = "disabled"
+nestopia_favored_system = "auto"
