Updated git ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 Win x64/Install Files/Images/Steam_Grid_Images/Thumbs.db
+Win x64/Install Files/Images/Steam_Grid_Images/Apps/Thumbs.db
+Win x64/Install Files/Images/Steam_Grid_Images/DS/Thumbs.db
+Win x64/Install Files/Images/Steam_Grid_Images/GBA/Thumbs.db
+*.db
