Added Xpadder AutoProfiles

--- a/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
+++ b/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
@@ -4,7 +4,7 @@
 
 [Core Settings]
 LastVersion=5.7
-LastHost=29D035DF
+LastHost=F5B22FDC
 Language=English
 
 [Default Locations]
@@ -13,7 +13,7 @@ DefaultProfileLocation=Controller-Profiles
 DefaultImageLocation=Controller-Images
 
 [Options]
-StartWithWindows=0
+StartWithWindows=1
 AssociateFiles=1
 StartMinimized=1
 AutoOpenLastProfile=1
@@ -35,10 +35,10 @@ ControllerPropertiesWindowPosition=674,341
 ControllerSettingsWindowPosition=693,298
 DPadSettingsWindowPosition=65535,65535
 HelpWindowPosition=728,361
-MainWindowPosition=1936,1096
+MainWindowPosition=912,481
 MouseSettingsWindowPosition=701,353
 ProfileSettingsWindowPosition=65535,65535
-SettingsWindowPosition=370,313
+SettingsWindowPosition=100,471
 Stick1SettingsWindowPosition=667,347
 Stick2SettingsWindowPosition=667,347
 TriggerSettingsWindowPosition=664,419
@@ -65,9 +65,9 @@ Controller1ID=4,94,2,142
 Controller1Hidden=0
 Controller1File=Controller-Profiles\My Controller (Xbox 360 Wireless Receiver for Windows).xpaddercontroller
 Controller1Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
-Controller1Recent2=Controller-Profiles\fusion_Xbox360.xpadderprofile
+Controller1Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
 Controller1Recent3=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
-Controller1Recent4=
+Controller1Recent4=Controller-Profiles\Nestopia_Xbox360.xpadderprofile
 Controller2Name=Wireless Controller
 Controller2ID=5,76,5,196
 Controller2Hidden=0
@@ -118,9 +118,30 @@ Controller7Recent3=
 Controller7Recent4=
 
 [AutoProfiles]
-AutoProfilesActivated=0
+AutoProfilesActivated=1
 AutoProfile1Activated=0
 AutoProfile1Profile=
 AutoProfile2Activated=1
-AutoProfile2Profile=
-AutoProfile2Watch=Xpadder.exe
+AutoProfile2Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile2Watch="Battle.net"
+AutoProfile3Activated=1
+AutoProfile3Profile=Controller-Profiles\Diablo III.xpadderprofile
+AutoProfile3Watch="Diablo III"
+AutoProfile4Activated=1
+AutoProfile4Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile4Watch="FFXIVLauncher"
+AutoProfile5Activated=1
+AutoProfile5Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+AutoProfile5Watch="FINAL FANTASY XIV"
+AutoProfile6Activated=1
+AutoProfile6Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile6Watch="Mozilla Firefox"
+AutoProfile7Activated=1
+AutoProfile7Profile=Controller-Profiles\RetroArch.xpadderprofile
+AutoProfile7Watch="RetroArch"
+AutoProfile8Activated=1
+AutoProfile8Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+AutoProfile8Watch="Steam"
+AutoProfile9Activated=1
+AutoProfile9Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile9Watch="Untitled - Google Chrome"
