Updated Xpadder Profiles

--- a/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
+++ b/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
@@ -64,10 +64,10 @@ Controller1Name=Controller (XBOX 360 For Windows)
 Controller1ID=4,94,2,142
 Controller1Hidden=0
 Controller1File=Controller-Profiles\My Controller (Xbox 360 Wireless Receiver for Windows).xpaddercontroller
-Controller1Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
-Controller1Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller1Recent3=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
-Controller1Recent4=Controller-Profiles\Nestopia_Xbox360.xpadderprofile
+Controller1Recent1=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+Controller1Recent2=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller1Recent3=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+Controller1Recent4=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
 Controller2Name=Wireless Controller
 Controller2ID=5,76,5,196
 Controller2Hidden=0
@@ -131,17 +131,35 @@ AutoProfile4Activated=1
 AutoProfile4Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
 AutoProfile4Watch="FFXIVLauncher"
 AutoProfile5Activated=1
-AutoProfile5Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
-AutoProfile5Watch="FINAL FANTASY XIV"
+AutoProfile5Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+AutoProfile5Watch="FINAL FANTASY X ETERNAL CALM"
 AutoProfile6Activated=1
-AutoProfile6Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile6Watch="Mozilla Firefox"
+AutoProfile6Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+AutoProfile6Watch="FINAL FANTASY X"
 AutoProfile7Activated=1
-AutoProfile7Profile=Controller-Profiles\RetroArch.xpadderprofile
-AutoProfile7Watch="RetroArch"
+AutoProfile7Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+AutoProfile7Watch="FINAL FANTASY X-2 LAST MISSION"
 AutoProfile8Activated=1
-AutoProfile8Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
-AutoProfile8Watch="Steam"
+AutoProfile8Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+AutoProfile8Watch="FINAL FANTASY X-2"
 AutoProfile9Activated=1
 AutoProfile9Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile9Watch="Untitled - Google Chrome"
+AutoProfile9Watch="FINAL FANTASY X/X-2 LAUNCHER"
+AutoProfile10Activated=1
+AutoProfile10Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+AutoProfile10Watch="FINAL FANTASY XIV"
+AutoProfile11Activated=1
+AutoProfile11Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile11Watch="Mozilla Firefox"
+AutoProfile12Activated=1
+AutoProfile12Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+AutoProfile12Watch="Plex Media Player"
+AutoProfile13Activated=1
+AutoProfile13Profile=Controller-Profiles\RetroArch.xpadderprofile
+AutoProfile13Watch="RetroArch"
+AutoProfile14Activated=1
+AutoProfile14Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+AutoProfile14Watch="Steam"
+AutoProfile15Activated=1
+AutoProfile15Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile15Watch="Untitled - Google Chrome"
