Updated ROM & App Xpadder Profile Settings

--- a/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
+++ b/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
@@ -4,7 +4,7 @@
 
 [Core Settings]
 LastVersion=5.7
-LastHost=F5B22FDC
+LastHost=4CCA047F
 Language=English
 
 [Default Locations]
@@ -35,7 +35,7 @@ ControllerPropertiesWindowPosition=674,341
 ControllerSettingsWindowPosition=693,298
 DPadSettingsWindowPosition=65535,65535
 HelpWindowPosition=728,361
-MainWindowPosition=912,481
+MainWindowPosition=914,483
 MouseSettingsWindowPosition=701,353
 ProfileSettingsWindowPosition=65535,65535
 SettingsWindowPosition=100,471
@@ -64,10 +64,10 @@ Controller1Name=Controller (XBOX 360 For Windows)
 Controller1ID=4,94,2,142
 Controller1Hidden=0
 Controller1File=Controller-Profiles\My Controller (Xbox 360 Wireless Receiver for Windows).xpaddercontroller
-Controller1Recent1=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-Controller1Recent2=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller1Recent1=Controller-Profiles\Steam_Xbox360.xpadderprofile
+Controller1Recent2=Controller-Profiles\Chrome_Xbox360.xpadderprofile
 Controller1Recent3=Controller-Profiles\FFX_X2_Steam.xpadderprofile
-Controller1Recent4=Controller-Profiles\Dolphin_Xbox360.xpadderprofile
+Controller1Recent4=Controller-Profiles\RetroArch.xpadderprofile
 Controller2Name=Wireless Controller
 Controller2ID=5,76,5,196
 Controller2Hidden=0
@@ -122,44 +122,32 @@ AutoProfilesActivated=1
 AutoProfile1Activated=0
 AutoProfile1Profile=
 AutoProfile2Activated=1
-AutoProfile2Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile2Watch="Battle.net"
+AutoProfile2Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+AutoProfile2Watch=" "
 AutoProfile3Activated=1
-AutoProfile3Profile=Controller-Profiles\Diablo III.xpadderprofile
-AutoProfile3Watch="Diablo III"
+AutoProfile3Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile3Watch="Battle.net"
 AutoProfile4Activated=1
-AutoProfile4Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile4Watch="FFXIVLauncher"
+AutoProfile4Profile=Controller-Profiles\Diablo III.xpadderprofile
+AutoProfile4Watch="Diablo III"
 AutoProfile5Activated=1
-AutoProfile5Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
-AutoProfile5Watch="FINAL FANTASY X ETERNAL CALM"
+AutoProfile5Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile5Watch="FFXIVLauncher"
 AutoProfile6Activated=1
 AutoProfile6Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
-AutoProfile6Watch="FINAL FANTASY X"
+AutoProfile6Watch="FINAL FANTASY X ETERNAL CALM"
 AutoProfile7Activated=1
 AutoProfile7Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
-AutoProfile7Watch="FINAL FANTASY X-2 LAST MISSION"
+AutoProfile7Watch="FINAL FANTASY X"
 AutoProfile8Activated=1
 AutoProfile8Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
-AutoProfile8Watch="FINAL FANTASY X-2"
+AutoProfile8Watch="FINAL FANTASY X-2 LAST MISSION"
 AutoProfile9Activated=1
-AutoProfile9Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile9Watch="FINAL FANTASY X/X-2 LAUNCHER"
+AutoProfile9Profile=Controller-Profiles\FFX_X2_Steam.xpadderprofile
+AutoProfile9Watch="FINAL FANTASY X-2"
 AutoProfile10Activated=1
-AutoProfile10Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
-AutoProfile10Watch="FINAL FANTASY XIV"
+AutoProfile10Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+AutoProfile10Watch="FINAL FANTASY X/X-2 LAUNCHER"
 AutoProfile11Activated=1
-AutoProfile11Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile11Watch="Mozilla Firefox"
-AutoProfile12Activated=1
-AutoProfile12Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
-AutoProfile12Watch="Plex Media Player"
-AutoProfile13Activated=1
-AutoProfile13Profile=Controller-Profiles\RetroArch.xpadderprofile
-AutoProfile13Watch="RetroArch"
-AutoProfile14Activated=1
-AutoProfile14Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
-AutoProfile14Watch="Steam"
-AutoProfile15Activated=1
-AutoProfile15Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
-AutoProfile15Watch="Untitled - Google Chrome"
+AutoProfile11Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+AutoProfile11Watch="FINAL FANTASY XIV"
