Updated Xpadder AutoProfile Settings

--- a/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
+++ b/Win x64/Install Files/Tools/Xpadder/Xpadder.ini
@@ -151,3 +151,26 @@ AutoProfile10Watch="FINAL FANTASY X/X-2 LAUNCHER"
 AutoProfile11Activated=1
 AutoProfile11Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
 AutoProfile11Watch="FINAL FANTASY XIV"
+AutoProfile12Activated=1
+
+AutoProfile12Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+
+AutoProfile12Watch="Mozilla Firefox"
+
+AutoProfile13Activated=1
+
+AutoProfile13Profile=Controller-Profiles\RetroArch.xpadderprofile
+
+AutoProfile13Watch="RetroArch"
+
+AutoProfile14Activated=1
+
+AutoProfile14Profile=Controller-Profiles\Steam_Xbox360.xpadderprofile
+
+AutoProfile14Watch="Steam"
+
+AutoProfile15Activated=1
+
+AutoProfile15Profile=Controller-Profiles\Chrome_Xbox360.xpadderprofile
+
+AutoProfile15Watch="Untitled - Google Chrome"
