Fixed Savedata path setting in mupen64plus_libretro.cfg

--- a/Win x64/Install Files/Emulators/RetroArch/configs/mupen64plus_libretro.cfg
+++ b/Win x64/Install Files/Emulators/RetroArch/configs/mupen64plus_libretro.cfg
@@ -115,8 +115,8 @@ joypad_autoconfig_dir = ":\autoconf"
 overlay_directory = ":\overlays"
 audio_filter_dir = ":\filters\audio"
 audio_resampler = "sinc"
-savefile_directory = "default"
-savestate_directory = "default"
+savefile_directory = ":\SAVEDATA\N64"
+savestate_directory = ":\SAVEDATA\N64"
 xmb_scale_factor = "100"
 xmb_alpha_factor = "75"
 xmb_theme = "0"
