Changed Dolphin Emulator To Render In Borderless Windowed Fullscreen

--- a/Win x64/Install Files/Emulators/Gamecube/Dolphin/User/Config/Dolphin.ini
+++ b/Win x64/Install Files/Emulators/Gamecube/Dolphin/User/Config/Dolphin.ini
@@ -214,7 +214,7 @@ DecreaseIRModifier = 0
 [Display]
 FullscreenResolution = Auto
 Fullscreen = True
-RenderToMain = False
+RenderToMain = True
 RenderWindowXPos = -1
 RenderWindowYPos = -1
 RenderWindowWidth = 640
