--- a/Win x64/Install Files/Emulators/Gamecube/Dolphin/User/Config/gfx_opengl.ini
+++ b/Win x64/Install Files/Emulators/Gamecube/Dolphin/User/Config/gfx_opengl.ini
@@ -35,7 +35,7 @@ DisableFog = False
 OMPDecoder = False
 EnableShaderDebugging = False
 LogRenderTimeToFile = False
-BorderlessFullscreen = False
+BorderlessFullscreen = True
 ConvertHiresTextures = False
 [Enhancements]
 ForceFiltering = False
