--- a/Test Build/Install Files/Tools/FreeVK.ini
+++ b/Test Build/Install Files/Tools/FreeVK.ini
@@ -1,5 +1,10 @@
 [Main]
+Site=1
 AutoClick=1
 FitWidth=0
-AlphaBlend=255
+AlphaBlend=254
+TMainFormTop=569
+TMainFormLeft=513
+TMainFormHeight=301
+TMainFormWidth=656
 TMainFormState=1
