--- a/Test Build/Install Files/Emulators/ROMS/PC_Games/Assassin's Creed Odyssey.bat.example
+++ b/Test Build/Install Files/Emulators/ROMS/PC_Games/Assassin's Creed Odyssey.bat.example
@@ -1,15 +1,15 @@
 ECHO off
-cls
+
 cd "%~dp0%"
 cd ..\..\..
-set "dirpath=%cd%"
-set "key=HKLM\SOFTWARE\WOW6432Node\Microsoft\Windows\CurrentVersion\Uninstall"
+SET "dirpath=%cd%"
+SET "key=HKLM\SOFTWARE\WOW6432Node\Microsoft\Windows\CurrentVersion\Uninstall"
 
 :app_path
-for /f "skip=1 tokens=*" %%a IN ('Reg query "%key%" /s /f "Assassin's Creed Odyssey"') DO if not defined line set "line=%%a" 2>NUL 1>NUL
-for /f "tokens=* delims= " %%c IN ('Reg query "%line%" /v InstallLocation') DO set "instloc=%%c" 2>NUL 1>NUL
-set instloc=%instloc:InstallLocation    REG_SZ    =%
-set instloc=%instloc:"=%
+FOR /f "skip=1 tokens=*" %%a IN ('Reg query "%key%" /s /f "Assassin's Creed Odyssey"') DO IF NOT defined line SET "line=%%a" 2>NUL 1>NUL
+FOR /f "tokens=* delims= " %%c IN ('Reg query "%line%" /v InstallLocation') DO SET "instloc=%%c" 2>NUL 1>NUL
+SET instloc=%instloc:InstallLocation    REG_SZ    =%
+SET instloc=%instloc:"=%
 
 "%instloc%ACOdyssey.exe"
 
