Updated Edit Settings GUI Application Testing Files

--- a/Settings GUI Testing/Config/general_settings.ini
+++ b/Settings GUI Testing/Config/general_settings.ini
@@ -1,3 +1,6 @@
 [General]
 Rename ROMs During Steam Import=disabled
 Launch Steamconsole On Windows Startup=enabled
+[Default_Browser]
+Chrome=disabled
+Firefox=enabled
