--- a/Test Build/Install Files/Config/general_settings.ini
+++ b/Test Build/Install Files/Config/general_settings.ini
@@ -1,3 +1,6 @@
-root_path=D:\Games\SteamConsole
-rom_renamer=enabled
-launch_steamconsole_on_startup=enabled
+[General]
+Rename ROMs During Steam Import=disabled
+Launch Steamconsole On Windows Startup=enabled
+[Default_Browser]
+Chrome=disabled
+Firefox=enabled
