Added AutoProfile For Firefox In Antimicro

--- a/Test Build/Install Files/Tools/antimicro/antimicro_settings.ini
+++ b/Test Build/Install Files/Tools/antimicro/antimicro_settings.ini
@@ -16,10 +16,10 @@ LogLevel=0
 LastProfileDir=profiles/
 
 [Controllers]
-Controller78696e70757401000000000000000000ConfigFile1=profiles/Chrome.gamecontroller.amgp
-Controller78696e70757401000000000000000000LastSelected=profiles/Chrome.gamecontroller.amgp
-Controller78696e70757401000000000000000000ConfigFile2=profiles/Steam.gamecontroller.amgp
-Controller78696e70757401000000000000000000ConfigFile3=profiles/blank-with-streaming.gamecontroller.amgp
+Controller78696e70757401000000000000000000ConfigFile1=profiles/blank.gamecontroller.amgp
+Controller78696e70757401000000000000000000LastSelected=profiles/blank.gamecontroller.amgp
+Controller78696e70757401000000000000000000ConfigFile2=profiles/blank-with-streaming.gamecontroller.amgp
+Controller78696e70757401000000000000000000ConfigFile3=profiles/Steam.gamecontroller.amgp
 Controller78696e70757401000000000000000000ConfigFile4=profiles/Desktop.gamecontroller.amgp
 Controller78696e70757401000000000000000000ConfigFile5=profiles/Retroarch.gamecontroller.amgp
 Controller4c05c405000000000000504944564944ConfigFile1=profiles/Desktop.gamecontroller.amgp
@@ -90,6 +90,11 @@ AutoProfile11GUID=all
 AutoProfile11Profile=D:\\Games\\SteamConsole\\Tools\\antimicro\\profiles\\PCSX2.gamecontroller.amgp
 AutoProfile11Active=1
 AutoProfile11DeviceName=
+AutoProfile12Exe=firefox.exe
+AutoProfile12GUID=all
+AutoProfile12Profile=D:\\Games\\SteamConsole\\Tools\\antimicro\\profiles\\Chrome.gamecontroller.amgp
+AutoProfile12Active=1
+AutoProfile12DeviceName=
 
 [KeyRepeat]
 KeyRepeatEnabled=0
