Fixed issue with web browser.bat not loading properly

--- a/Test Build/Install Files/Config/launchers_apps.ini
+++ b/Test Build/Install Files/Config/launchers_apps.ini
@@ -11,7 +11,6 @@ AMC=enabled
 Beam=enabled
 BTN2GO=enabled
 Cartoon Hangover=enabled
-chrome=enabled
 Cinema Sins=enabled
 ComedyCentral=enabled
 CONtv=enabled
@@ -39,5 +38,6 @@ Tru TV=enabled
 Tumblr=enabled
 Twitch=enabled
 VH1=enabled
+Web Browser=enabled
 Xbox=enabled
 Youtube=enabled
