Updated GUI Application Testing Files

--- a/Settings GUI Testing/Config/launchers_apps.ini
+++ b/Settings GUI Testing/Config/launchers_apps.ini
@@ -11,8 +11,7 @@ AMC=enabled
 Beam=enabled
 BTN2GO=enabled
 Cartoon Hangover=enabled
-chrome=enabled
-Cinema Sins=enabled
+Cinema Sins=disabled
 ComedyCentral=enabled
 CONtv=enabled
 Danny Choo Channel=enabled
@@ -39,5 +38,6 @@ Tru TV=enabled
 Tumblr=enabled
 Twitch=enabled
 VH1=enabled
+Web Browser=enabled
 Xbox=enabled
 Youtube=enabled
