--- a/Settings GUI Testing/Config/general_settings.ini
+++ b/Settings GUI Testing/Config/general_settings.ini
@@ -2,5 +2,5 @@
 Rename ROMs During Steam Import=disabled
 Launch Steamconsole On Windows Startup=enabled
 [Default_Browser]
-Chrome=disabled
-Firefox=enabled
+Google Chrome=disabled
+Mozilla Firefox=enabled
