Updated Apps & Launcher Bat Files

--- a/Test Build/Install Files/Emulators/ROMS/PC_Games/Assassin's Creed Odyssey.bat.example
+++ b/Test Build/Install Files/Emulators/ROMS/PC_Games/Assassin's Creed Odyssey.bat.example
@@ -6,8 +6,8 @@ SET "dirpath=%cd%"
 SET "key=HKLM\SOFTWARE\WOW6432Node\Microsoft\Windows\CurrentVersion\Uninstall"
 
 :app_path
-FOR /f "skip=1 tokens=*" %%a IN ('Reg query "%key%" /s /f "Assassin's Creed Odyssey"') DO IF NOT defined line SET "line=%%a" 2>NUL 1>NUL
-FOR /f "tokens=* delims= " %%c IN ('Reg query "%line%" /v InstallLocation') DO SET "instloc=%%c" 2>NUL 1>NUL
+FOR /f "skip=1 tokens=*" %%a IN ('REG QUERY "%key%" /s /f "Assassin's Creed Odyssey"') DO IF NOT defined line SET "line=%%a" 2>NUL 1>NUL
+FOR /f "tokens=* delims= " %%c IN ('REG QUERY "%line%" /v InstallLocation') DO SET "instloc=%%c" 2>NUL 1>NUL
 SET instloc=%instloc:InstallLocation    REG_SZ    =%
 SET instloc=%instloc:"=%
 
