--- a/Test Build/Install Files/Config/general_settings.ini
+++ b/Test Build/Install Files/Config/general_settings.ini
@@ -1,6 +1,6 @@
 [General]
-Rename ROMs During Steam Import=disabled
+Rename ROMs During Steam Import=enabled
 Launch Steamconsole On Windows Startup=enabled
 [Default_Browser]
-Google Chrome=disabled
-Mozilla Firefox=enabled
+Google Chrome=enabled
+Mozilla Firefox=disabled
