Updated SteamConsole Settings.exe

--- a/Test Build/Install Files/Config/general_settings.ini
+++ b/Test Build/Install Files/Config/general_settings.ini
@@ -1,6 +1,6 @@
 [General]
 Rename ROMs During Steam Import=enabled
-Launch Steamconsole On Windows Startup=enabled
+Launch Steamconsole On Windows Startup=disabled
 [Default_Browser]
 Google Chrome=enabled
 Mozilla Firefox=disabled
